# aria

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
aria-rebuild-context/: ARIA_ARCHITECTURE_PROPOSAL.md  ARIA_PROJECT_BRIEF.md  OLLAMA_RESEARCH_GAPS.md  PROJECT_SETUP_GUIDE.md  TECHNICAL_RESEARCH_TODO.md
components/: ap.py  tts.py
configs/: ava.json  default.json
docs/: OLLAMA_MIGRATION.md  design.md  features.md  implementation.md
tests/: README.md  __init__.py
